INTPO002PD-5305: Create average costs of each month of 2022